; ModuleID = '/home/carl/AnghaBench/dsvpn/src/extr_os.c_safe_write_partial.c'
source_filename = "/home/carl/AnghaBench/dsvpn/src/extr_os.c_safe_write_partial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8
@exit_signal_received = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @safe_write_partial(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i8*, i8** %5, align 8
  store i8* %9, i8** %7, align 8
  br label %10

10:                                               ; preds = %26, %3
  %11 = load i32, i32* %4, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @write(i32 %11, i8* %12, i64 %13)
  store i32 %14, i32* %8, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %10
  %17 = load i64, i64* @errno, align 8
  %18 = load i64, i64* @EINTR, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %24

20:                                               ; preds = %16
  %21 = load i32, i32* @exit_signal_received, align 4
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  br label %24

24:                                               ; preds = %20, %16, %10
  %25 = phi i1 [ false, %16 ], [ false, %10 ], [ %23, %20 ]
  br i1 %25, label %26, label %27

26:                                               ; preds = %24
  br label %10

27:                                               ; preds = %24
  %28 = load i32, i32* %8, align 4
  ret i32 %28
}

declare dso_local i32 @write(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
